crates/hird-parse/tests/snapshots/smoke__fn_minimal.snap
---
source: crates/hird-parse/tests/smoke.rs
assertion_line: 95
expression: "render_cst(\"fn foo() = 42\")"
---
SOURCE_FILE
  FN_DECL
    FN_KW "fn"
    WHITESPACE " "
    IDENT "foo"
    L_PAREN "("
    R_PAREN ")"
    WHITESPACE " "
    EQ "="
    WHITESPACE " "
    INT "42"
