crates/hird-parse/tests/snapshots/smoke__fn_trailing_comma_params.snap
---
source: crates/hird-parse/tests/smoke.rs
assertion_line: 120
expression: "render_cst(\"fn f(x: Int, y: Int,) = x\")"
---
SOURCE_FILE
  FN_DECL
    FN_KW "fn"
    WHITESPACE " "
    IDENT "f"
    L_PAREN "("
    PARAM_LIST
      PARAM
        IDENT "x"
        COLON ":"
        WHITESPACE " "
        IDENT "Int"
      COMMA ","
      PARAM
        WHITESPACE " "
        IDENT "y"
        COLON ":"
        WHITESPACE " "
        IDENT "Int"
      COMMA ","
    R_PAREN ")"
    WHITESPACE " "
    EQ "="
    WHITESPACE " "
    IDENT "x"
